--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 project(Pathfinding)
 cmake_minimum_required(VERSION 2.8)
-aux_source_directory(. SRC_LIST)
-add_executable(${PROJECT_NAME} ${SRC_LIST})
+file(GLOB DEVLIB "lib/devlib/*")
+file(GLOB_RECURSE SOURCE_CODE "code/*")
+add_executable(${PROJECT_NAME} main.cpp ${DEVLIB} ${SOURCE_CODE})
 
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_mod" ${CMAKE_MODULE_PATH})
+find_package(SFML 2 REQUIRED system window graphics network audio)
+find_package(OpenCV REQUIRED)
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
+include_directories(${SFML_INCLUDE_DIR})
+target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES})
